# ComfyUI-ZImage-Triton

./: .gitignore  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
benchmark/: BENCHMARK.md
src/zimage_triton/: __init__.py  model_patcher.py
src/zimage_triton/kernels/: __init__.py  adaln_modulation.py  fused_norm_residual.py  fused_qknorm_rope.py  rms_norm.py  rope_3d.py  swiglu.py  utils.py
src/zimage_triton/models/: __init__.py  base_runner.py  patching.py  patching_comfyui.py  triton_runner.py
src/zimage_triton/quantization/: __init__.py  hadamard.py  int8_linear.py
workflows/base/: t2i.json  t2i_lora_famegrid.json  t2i_lora_famegrid_triton.json  t2i_lora_famegrid_triton_int8.json  t2i_multi_lora.json  t2i_multi_lora_triton.json  t2i_multi_lora_triton_int8.json  t2i_triton.json  t2i_triton_int8.json
workflows/turbo/: t2i.json  t2i_controlnet_lora.json  t2i_controlnet_lora_triton.json  t2i_controlnet_lora_triton_int8.json  t2i_lora_famegrid.json  t2i_lora_famegrid_triton.json  t2i_lora_famegrid_triton_int8.json  t2i_multi_lora.json  t2i_multi_lora_triton.json  t2i_multi_lora_triton_int8.json  t2i_triton.json  t2i_triton_int8.json
